@@ -15,7 +15,16 @@ Run now calls display on the model given
 Controller factory changed to take in a Model instead of a SongRep
 
 MidiViewImpl directly changes the model.  This is bad design but it works.
-IMPORTANT NOTE: HAD TO CHANGE THEIR MIDIVIEWIMPL TO USE INSTRUMENT - 1 OR WE GOT OOB EXCEPTIONS IN DF-TTFAF.TXT
 
 Composite controller changed significantly
-Runnables are not working at all currently
+Can pause/play and reset currently.
+
+Their play method in compositeview is super weird?  When used to resume it resumes where it was but
+it also resets shit?  I used it both to resume and to reset to 0.  That's super weird.
+
+They're dancing around nulls a little bit which is bad practice I guess
+
+Since we're pretty sure their shit reset, how did they do these things before?  If there is a way to make them work
+without changing their code, it would be better.  For now, this is working.
+IMPORTANT NOTE: HAD TO CHANGE THEIR MIDIVIEWIMPL TO USE INSTRUMENT - 1 OR WE GOT OOB EXCEPTIONS IN DF-TTFAF.TXT
+IMPORTANT NOTE: HAD TO COMMENT OUT ADDKEYLISTENER AND ADDMOUSELISTENER IN GUYVIEWIMPL TO ADD THEM PROPERLY
